--- a/mystyles2- Copy.css
+++ b/mystyles2- Copy.css
@@ -1,3 +1,5 @@
+
+
 #container
 {
     background-color: black;
@@ -47,6 +49,7 @@ h1
     padding: 8%;
     margin: 4%;
     color: rgb(253, 0, 0);
+    font-size: 2.0em;
     
 }
 h2
@@ -57,6 +60,7 @@ h2
     padding: 8%;
     margin: 4%;
     color: rgb(255, 225, 0);
+    font-size: 1.5em;
     
 }
 
@@ -77,7 +81,7 @@ p
 body
 {
     background-image: url(images/iron.jpg);
-    font-size: x-large;
+    font-size: 1em;
     
     
 }
@@ -92,9 +96,9 @@ img
 
 nav
 {
-        background-color: rgb(253, 0, 0);
-        line-height: 200%;
-        display: block;
+    background-color: rgb(253, 0, 0);
+    line-height: 200%;
+    display: block;
 
 }
 
@@ -128,4 +132,17 @@ nav a:active{
 }
 div{
     font-weight: bold;
+}
+
+
+@media only screen and (max-width: 640px){
+ aside, section {
+    float: none;
+    width: 100%;
+    margin: 0 2%, 2% 0;
+}
+
+img{
+    width: 80%;
+}
 }
